2007-11-11  KUBO Takehiro  <kubo@jiubao.org>
	* test/config.rb, test/test_dbi.rb, test/test_describe.rb,
	  test/test_oci8.rb: add 'purge' option to 'drop table' statement
	   when Oracle 10g or upper.
	* ext/oci8/bind.c, ext/oci8/const.c, ext/oci8/oci8.h, ext/oci8/stmt.c,
	  lib/oci8.rb.in, test/test_oci8.rb: add OCI8::BindType::BinaryDouble
	   when SQLT_BDOUBLE is defined.

2007-10-14  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oraconf.rb: fix for FreeBSD oracle8-client port.
	   Not all tests are passed on FreeBSD yet.

2007-10-11  KUBO Takehiro  <kubo@jiubao.org>
	* lib/DBD/OCI8/OCI8.rb: add DatabaseHandle#columns for DBI.
	    (suggested by Venkat Pa)

2007-10-11  KUBO Takehiro  <kubo@jiubao.org>
	* lib/DBD/OCI8/OCI8.rb: fix external OS authentication.
	    I applied Dan Fitch's patch to improper location.

2007-07-03  KUBO Takehiro  <kubo@jiubao.org>
	* lib/DBD/OCI8/OCI8.rb: fix for external OS authentication.
	    (contributed by Dan Fitch)

2007-07-01  KUBO Takehiro  <kubo@jiubao.org>
	* NEWS: add changes between 1.0.0-rc2 and 1.0.0-rc3.
	* VERSION: change version to 1.0.0-rc3.
	* ext/oci8/oraconf.rb: fix a problem to compile with a
	   third-party x86_64 rpm package. '--with-instant-client'
	   option become obsolete and is ignored.
	* test/test_oci8.rb: skip test_binary_float test when the testing
	   server version is 9i or earlier.

2007-06-26  KUBO Takehiro  <kubo@jiubao.org>
	* lib/oci8.rb.in: add external OS authentication. (suggested by Dan Fitch)
	      conn = OCI8.new('/')
	    or
	      conn = OCI8.new(nil, nil)
	* test/test_connstr.rb: fix a testcase for external OS authentication.

2007-06-23  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oraconf.rb: read a shared library's ELF header to
	    check what cpu is it for. (linux x86, x86_64 and ia64 only)

2007-06-05  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oraconf.rb: use 'File.exist?' instead of deprecated
	    method 'File.exists?'.