@@ -14,13 +14,16 @@
     } \
 } while(0)
 
-#define NUMBER_FORMAT1 (OraText*)"FM9999999999999999999999990.9999999999999999999999999999999999999"
-#define NUMBER_FORMAT1_LEN (sizeof(NUMBER_FORMAT1) - 1)
-#define NUMBER_FORMAT2 (OraText*)"FM99999999999999999999999999999999999990.999999999999999999999999"
-#define NUMBER_FORMAT2_LEN (sizeof(NUMBER_FORMAT2) - 1)
-#define NUMBER_FORMAT2_DECIMAL                          (sizeof("999999999999999999999999") - 1)
-#define NUMBER_FORMAT_INT (OraText*)"FM99999999999999999999999999999999999990"
-#define NUMBER_FORMAT_INT_LEN (sizeof(NUMBER_FORMAT_INT) - 1)
+#define NUMBER_FORMAT1_STR "FM9999999999999999999999990.9999999999999999999999999999999999999"
+#define NUMBER_FORMAT1 (OraText*)NUMBER_FORMAT1_STR
+#define NUMBER_FORMAT1_LEN (sizeof(NUMBER_FORMAT1_STR) - 1)
+#define NUMBER_FORMAT2_STR "FM99999999999999999999999999999999999990.999999999999999999999999"
+#define NUMBER_FORMAT2 (OraText*)NUMBER_FORMAT2_STR
+#define NUMBER_FORMAT2_LEN (sizeof(NUMBER_FORMAT2_STR) - 1)
+#define NUMBER_FORMAT2_DECIMAL                              (sizeof("999999999999999999999999") - 1)
+#define NUMBER_FORMAT_INT_STR "FM99999999999999999999999999999999999990"
+#define NUMBER_FORMAT_INT (OraText*)NUMBER_FORMAT_INT_STR
+#define NUMBER_FORMAT_INT_LEN (sizeof(NUMBER_FORMAT_INT_STR) - 1)
 
 #ifndef StringValue
 #define StringValue(s) ((s) = (TYPE(s) == T_STRING) ? (s) : rb_str_to_str(s))
