@@ -1,3 +1,7 @@
+2007-11-16  KUBO Takehiro  <kubo@jiubao.org>
+	* ext/oci8/ocinumber.c, test/test_oci8.rb: fix a BUG to bind
+	   Bignum. This bug was added in ruby-oci8 1.0.0-rc2.
+
 2007-11-11  KUBO Takehiro  <kubo@jiubao.org>
 	* test/config.rb, test/test_dbi.rb, test/test_describe.rb,
 	  test/test_oci8.rb: add 'purge' option to 'drop table' statement
